--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,12 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+div {
+  display: flex;
 }
 
 img {
@@ -13,9 +19,12 @@ img {
 
 button {
   font-family: Roboto, sans-serif;
+  font-weight: 500;
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 1vh;
+  margin: 2px;
 }
 
 input {
@@ -24,4 +33,40 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  gap: 10px;
+  font-weight: 400;
+}
+
+a {
+  color: rgb(85, 85, 85);
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+}
+
+.content {
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+}
+.left-links {
+margin-right: auto;
+padding-left: 15px;
+}
+
+.right-links {
+margin-left: auto;
+padding-right: 15px;
+}
+
+.footer {
+  background-color: whitesmoke;
 }
